--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -46,7 +46,7 @@
       right: 0;
       width: $height + px;
       height: $height + px;
-      z-index: 1;
+      z-index: 2000;
       transform: scale(0.55);
       span.line {
         border-radius: $height / 3 * $menu-area * $menu-stroke / 3 + px;
